vendor/fixed-macro/tests/compile-fail/int-suffix.rs
fn main() {
    fixed_macro::fixed!(123usize: I4F4);
}
